<resources>
    <string name="app_name">Film Searcher</string>
    <string name="disclaimer">"Картинки взяты с movieposters.com"</string>
    <string name="menu">"МЕНЮ"</string>
    <string name="favorites">"ИЗБРАННОЕ"</string>
    <string name="watch_later">"ПОСМОТРЕТЬ ПОЗЖЕ"</string>
    <string name="collections">"ПОДБОРКИ"</string>
    <string name="settings">"НАСТРОЙКИ"</string>
    <string name="menu_favorites_title">Избранное</string>
    <string name="menu_watch_later_title">Смотреть позже</string>
    <string name="menu_selections_title">Подборки</string>
    <string name="menu_settings_title">Настройки</string>
    <string name="page_title">Film search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search</string>
    <string name="menu_home_title_text">Главный</string>
    <string name="menu_settings_title_text">Настройки</string>
    <string name="radio_button_popular">Популярные</string>
    <string name="radio_button_top_rated">Топ</string>
    <string name="radio_button_upcoming">Скоро</string>
    <string name="radio_button_playing">В кинотеатрах</string>
    <string name="radio_group_header">Подборка на главном экране:</string>
    <string name="permission_storage">Нет разрешения. Пожалуйста, предоставьте разрешение</string>
    <string name="downloaded_to_gallery">"Сохранено в галерею"</string>
    <string name="open">В галерею</string>
</resources>